# data-analysis-chat-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_WALKTHROUGH.md  README.md  TECHNICAL_ASSIGNMENT.md  compose.yaml  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  live-quality-eval.yml  release-quality-gate.yml
agent-flow-explorer/: .gitignore  README.md  index.html  package-lock.json  package.json
agent-flow-explorer/src/: App.tsx  styles.css  types.ts
config/: agent.yaml
data/: golden_trios.jsonl  quality_eval_cases.jsonl
docs/: architecture.md  bigquery-live-test.md  live-test-findings.md  milestones.md  qa.md  requirements.md
evals/: __init__.py  dataset.py  guardrails.py  human.py  quality.py  run.py
evals/baselines/: accepted-smoke-v1.json
reports/: EVALUATOR_REMEDIATION_2026-07-15.md  EXECUTIVE_EVALUATION_2026-07-14.md  REVIEWER_RELIABILITY_2026-07-15.md  TESTING_REPORT_2026-07-14.md
retail_agent/: __init__.py  __main__.py  agent.py  bigquery.py  bootstrap.py  cli.py  config.py  embeddings.py  evals.py  golden_store.py  models.py  observability.py  pii.py  ports.py  quality_evals.py  rendering.py  sql_guard.py
scripts/: reviewer_conversation.txt
tests/: conftest.py  test_agent.py  test_bigquery.py  test_bootstrap.py  test_cli.py  test_config.py  test_embeddings.py  test_eval_cli.py  test_eval_dataset.py  test_eval_portfolio.py  test_evals.py  test_evaluator_mutations.py  test_golden_store.py  test_human_evals.py  test_pii.py  test_quality_evals.py  test_rendering.py  test_sql_guard.py  test_workflows.py
(+111 files in other folders)
