[project]
name = "retail-data-analysis-chat-assistant"
version = "0.1.0"
description = "Executive-facing retail analytics assistant prototype and production HLD"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-cloud-bigquery>=3.42,<4",
    "google-genai>=2.10,<3",
    "logfire>=4.37,<5",
    "pydantic>=2.12,<3",
    "pydantic-ai>=2.9,<3",
    "pydantic-evals>=2.9,<3",
    "pydantic-settings>=2.12,<3",
    "pyyaml>=6.0,<7",
    "qdrant-client>=1.18,<2",
    "rich>=15,<16",
    "sqlglot>=30.12,<31",
    "typer>=0.26,<1",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "ruff>=0.14,<1",
]

[tool.uv]
package = false
required-version = "==0.10.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["retail_agent"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
